test/libsolidity/syntaxTests/nameAndTypeResolution/416_interface_function_bodies.sol
interface I {
    function f() public {
    }
}
// ----
// TypeError: (18-45): Functions in interfaces cannot have an implementation.
// TypeError: (18-45): Functions in interfaces must be declared external.
